--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GameHub - Simulador iOS</title>
+    <title>Move37 games</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -33,6 +33,7 @@
     </div>
 
     <script src="games/snake.js"></script>
+    <script src="games/minesweeper.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
