cambios profundos en estetica y contenedor de juego

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Move37 Games</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="gameContainer.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=SF+Pro+Display:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -32,6 +33,9 @@
         </div>
     </div>
 
+    <script src="gameStyles.js"></script>
+    <script src="GameContainer.js"></script>
+    <script src="GameLoader.js"></script>
     <script src="games/snake.js"></script>
     <script src="games/minesweeper.js"></script>
     <script src="games/combat.js"></script>
