cambiando el ancho del canvas para que no se salga la serpeinte

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <script src="games/snake.js"></script>
     <script src="games/minesweeper.js"></script>
     <script src="games/combat.js"></script>
+    <script src="games/pong.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
