--- a/index.html
+++ b/index.html
@@ -33,13 +33,36 @@
         </div>
     </div>
 
+    <!-- Core Configuration -->
+    <script src="src/config/constants.js"></script>
+    <script src="src/config/gameConfig.js"></script>
+
+    <!-- Core Modules -->
+    <script src="src/core/BaseGame.js"></script>
+    <script src="src/core/InputManager.js"></script>
+    <script src="src/core/StorageManager.js"></script>
+
+    <!-- Utilities -->
+    <script src="src/utils/helpers.js"></script>
+    <script src="src/utils/gameUI.js"></script>
+
+    <!-- Managers -->
+    <script src="src/managers/UIManager.js"></script>
+    <script src="src/managers/NavigationManager.js"></script>
+    <script src="src/managers/StateManager.js"></script>
+
+    <!-- Game Infrastructure -->
     <script src="gameStyles.js"></script>
     <script src="GameContainer.js"></script>
     <script src="GameLoader.js"></script>
-    <script src="games/snake.js"></script>
-    <script src="games/minesweeper.js"></script>
-    <script src="games/combat.js"></script>
-    <script src="games/pong.js"></script>
-    <script src="script.js"></script>
+
+    <!-- Games (Refactored) -->
+    <script src="src/games/SnakeGame.js"></script>
+    <script src="src/games/MinesweeperGame.js"></script>
+    <script src="src/games/PongGame.js"></script>
+    <script src="src/games/CombatGame.js"></script>
+
+    <!-- Main Application -->
+    <script src="src/app.js"></script>
 </body>
 </html>
