refactorizacion con claude y escalado

--- a/index.html
+++ b/index.html
@@ -39,24 +39,32 @@
 
     <!-- Core Modules -->
     <script src="src/core/BaseGame.js"></script>
+    <script src="src/core/BaseApp.js"></script>
     <script src="src/core/InputManager.js"></script>
     <script src="src/core/StorageManager.js"></script>
+    <script src="src/core/GameContainer.js"></script>
 
     <!-- Utilities -->
     <script src="src/utils/helpers.js"></script>
     <script src="src/utils/gameUI.js"></script>
+    <script src="src/utils/gameStyles.js"></script>
 
     <!-- Managers -->
     <script src="src/managers/UIManager.js"></script>
     <script src="src/managers/NavigationManager.js"></script>
     <script src="src/managers/StateManager.js"></script>
 
-    <!-- Game Infrastructure -->
-    <script src="gameStyles.js"></script>
-    <script src="GameContainer.js"></script>
-    <script src="GameLoader.js"></script>
+    <!-- Loaders -->
+    <script src="src/loaders/GameLoader.js"></script>
+    <script src="src/loaders/AppLoader.js"></script>
 
-    <!-- Games (Refactored) -->
+    <!-- Apps -->
+    <script src="src/apps/SettingsApp.js"></script>
+    <script src="src/apps/MessagesApp.js"></script>
+    <script src="src/apps/BrowserApp.js"></script>
+    <script src="src/apps/AppStoreApp.js"></script>
+
+    <!-- Games -->
     <script src="src/games/SnakeGame.js"></script>
     <script src="src/games/MinesweeperGame.js"></script>
     <script src="src/games/PongGame.js"></script>
