--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=SF+Pro+Display:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <script defer src="https://umami.darma.cc/script.js" data-website-id="61afa421-0487-4803-be52-75b98137d696"></script>
 </head>
 <body>
     <div class="device-container">
